After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731569 - Server does not free all resources if session timeout
Server does not free all resources if session timeout
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-12 12:21 UTC by Ognyan Tonchev (redstar_)
Modified: 2014-06-18 13:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
client: Destroy the rtsp watch after connection close (970 bytes, patch)
2014-06-12 12:21 UTC, Ognyan Tonchev (redstar_)
committed Details | Review
client: ref the context until rtsp watch is alive (2.15 KB, patch)
2014-06-12 12:25 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2014-06-12 12:21:44 UTC
Created attachment 278333 [details] [review]
client: Destroy the rtsp watch after connection close

After session timeout the server will not free the client object and the socket unless the other side has closed its end of the TCP connection. But that is bad since an unauthorized client can easily make the server unavailable.
Comment 1 Ognyan Tonchev (redstar_) 2014-06-12 12:25:10 UTC
Created attachment 278334 [details] [review]
client: ref the context until rtsp watch is alive

This patch is also necessary since it makes sure that unmanage_client () will not free the client context while the RTSP watch is being destroyed. And I have actually seen that happen.
Comment 2 Wim Taymans 2014-06-18 13:24:07 UTC
commit f2b1aa8c817e78ff255c47d6f5637d528b7e2944
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Thu Jun 12 13:49:17 2014 +0200

    client: ref the context until rtsp watch is alive
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=731569

commit 97152525887e7f8d83a26c739f59e5520383be54
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Thu Jun 12 13:48:44 2014 +0200

    client: Destroy the rtsp watch after connection close