client: ref the context until rtsp watch is alive

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=731569